# agentcloak

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml
.claude/skills/agentcloak/: SKILL.md
.claude/skills/agentcloak/references/: getting-started.md
.github/workflows/: ci.yml  publish.yml
.trellis/spec/guides/: project-roadmap.md
docs/en/explanation/: architecture.md  snapshot-model.md
docs/en/getting-started/: installation.md  quickstart.md
docs/en/guides/: backends.md  capture.md  mcp-setup.md  profiles.md  remote-bridge.md  security.md  spells.md  stealth.md
docs/en/reference/: cli.md  config.md  local-storage.md  mcp.md
docs/zh/explanation/: architecture.md  snapshot-model.md
docs/zh/getting-started/: installation.md  quickstart.md
docs/zh/guides/: backends.md  capture.md  mcp-setup.md  profiles.md  remote-bridge.md  security.md  spells.md  stealth.md
docs/zh/reference/: cli.md  config.md  local-storage.md  mcp.md
scripts/: build_bridge.py  check_consistency.py  check_surface_count.py  generate_client.py  generate_skill.py  preflight.py  sync_skill_data.py
skills/agentcloak/: SKILL.md
skills/agentcloak/evals/: trigger-eval.json
skills/agentcloak/references/: commands-reference.md  data-and-spells.md  getting-started.md  recipes.md  remote-bridge.md  troubleshooting.md
src/agentcloak/: __init__.py  __main__.py
src/agentcloak/_skill_data/: __init__.py
src/agentcloak/_skill_data/agentcloak/: SKILL.md
src/agentcloak/adapters/: __init__.py  analyzer.py  context.py  discovery.py  executor.py  generator.py  registry.py  types.py
src/agentcloak/adapters/pipeline/: __init__.py  engine.py  steps.py  template.py
src/agentcloak/adapters/sites/: _example.py
src/agentcloak/bridge/: __main__.py  config.py  server.py  start_bridge.bat
src/agentcloak/bridge/agentcloak-chrome-extension/: background.js  manifest.json  options.html  options.js
src/agentcloak/bridge/extension/: background.js  manifest.json  options.html  options.js
src/agentcloak/browser/: __init__.py  _profile_writer.py  _snapshot_builder.py  base.py  cloak_ctx.py  patchright_ctx.py  playwright_ctx.py  protocol.py  remote_ctx.py  secure_ctx.py  state.py  xvfb.py
src/agentcloak/cli/: __init__.py  _dispatch.py  app.py  client.py  output.py
src/agentcloak/cli/commands/: __init__.py  action.py  bridge_cmd.py  browser.py  capture_cmd.py  cdp.py  config_cmd.py  cookies_cmd.py  daemon_cmd.py  dialog.py  doctor.py  fetch.py  frame.py  js.py  launch.py  network.py  profile.py  site_cmd.py  skill_cmd.py  spell_cmd.py  tab.py  upload.py  wait_cmd.py
src/agentcloak/client/: __init__.py  daemon_client.py
src/agentcloak/core/: __init__.py  capture.py  config.py  config_writer.py  discovery.py  errors.py  har.py  resume.py  security.py  types.py
src/agentcloak/daemon/: __init__.py  __main__.py  app.py  context_manager.py  dependencies.py  exception_handlers.py  middleware.py  models.py  routes.py  server.py  text_renderers.py
src/agentcloak/mcp/: __init__.py  __main__.py  _format.py  client.py  server.py
src/agentcloak/spells/: __init__.py  analyzer.py  context.py  discovery.py  executor.py  generator.py  registry.py  types.py
src/browserctl/: __init__.py  __main__.py
src/browserctl/adapters/: __init__.py  analyzer.py  context.py  discovery.py  executor.py  generator.py  registry.py  types.py
src/browserctl/bridge/: __init__.py  __main__.py  config.py  server.py  start_bridge.bat
src/browserctl/browser/: __init__.py  _profile_writer.py  cloak_ctx.py  patchright_ctx.py  protocol.py  remote_ctx.py  secure_ctx.py  state.py  xvfb.py
src/browserctl/cli/: app.py  client.py  output.py
src/browserctl/core/: capture.py  config.py  discovery.py  errors.py  har.py  resume.py  security.py  seq.py  types.py
src/browserctl/daemon/: __main__.py  middleware.py  routes.py  server.py
src/browserctl/mcp/: __init__.py  __main__.py  client.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  test_capture.py  test_daemon_api.py  test_interaction.py  test_navigation.py  test_profile.py  test_recovery.py  test_tabs.py
tests/integration/pages/: dynamic.html  form.html  index.html  links.html  result.html
tests/unit/: test_adapter_registry.py  test_analyzer.py  test_bridge.py  test_capture.py  test_capture_routes.py  test_client.py  test_config.py  test_context_manager.py  test_doctor.py  test_errors.py  test_executor.py  test_fetch.py  test_generator.py  test_har.py  test_mcp.py  test_patchright_ctx.py  test_phase3b.py  test_pipeline.py  test_playwright_ctx.py  test_profile.py  test_routes.py  test_security.py  test_seq.py  test_site_cmd.py  test_snapshot_builder.py  test_spell_registry.py  test_stealth.py  test_tab.py  test_template.py  test_text_renderers.py  test_url_matching.py
(+60 files in other folders)
