[project]
name = "agentcloak"
version = "0.2.0"
description = "Browser automation toolkit for AI agents — CLI + MCP dual interface, multi-backend stealth, remote bridge"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{ name = "shayu", email = "lincmars@gmail.com" }]
keywords = [
    "browser", "automation", "ai-agent", "cli", "mcp",
    "playwright", "stealth", "web-scraping", "accessibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "orjson>=3.10",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "starlette>=0.40",
    "websockets>=12.0",
    "cloakbrowser>=0.3",
    "httpx>=0.27",
    "httpcloak>=1.6",
    "mcp>=1.27.0,<2.0.0",
]

[project.scripts]
agentcloak = "agentcloak.cli.app:main"
cloak = "agentcloak.cli.app:main"
agentcloak-mcp = "agentcloak.mcp.server:main"

[project.optional-dependencies]
# kept for backward compat: pip install agentcloak[stealth] / [mcp] still works
stealth = []
mcp = []
discovery = [
    "zeroconf>=0.131",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/shayuc137/agentcloak"
Repository = "https://github.com/shayuc137/agentcloak"
Issues = "https://github.com/shayuc137/agentcloak/issues"
Changelog = "https://github.com/shayuc137/agentcloak/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcloak"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "UP007",   # allow X | Y union syntax (we use it)
    "B008",    # typer.Option() in defaults is required by Typer
    "SIM117",  # nested async with is clearer for session + request
]

[tool.ruff.lint.isort]
known-first-party = ["agentcloak"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]
# CloakBrowser ships a public Python API without type stubs; zeroconf is an
# optional discovery dep with the same story. Disable the stub-only signal so
# strict mode focuses on our own code.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "network: tests that require internet access (real websites)",
]
